# notebookbot

./: .gitignore  README.md  build.py  getting_started.ipynb  pyproject.toml  requirements.txt
src/authentication/: api_key_interface.py  api_key_retriever.py  authentication_manager.py  decrypted_api_key.py  secure_api_key_manager.py
src/notebookbot/: _version.py
src/notebookbot/authentication/: api_key_encryption_manager.py  api_key_interface.py  authentication_manager.py  authentication_setup.py  decrypted_api_key.py
src/notebookbot/chromadb/: chromadb_manager.py
src/notebookbot/data_help/: save_documents_to_json.py  save_documents_to_txt.py
src/notebookbot/llm_tools/: arxiv_search.py  query_documents.py
src/notebookbot/scripts/: authentication_setup.py  notebookbot_run.py  setup_authentication.py
src/scripts/: notebookbot_run.py  setup_authentication.py
tests/notebookbot/scripts/: test_setup_authentication.py
