[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capstone_repo_0"
description = "Your project description"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/capstone_repo_0"
"Bug Tracker" = "https://github.com/yourusername/capstone_repo_0/issues"

[tool.setuptools.dynamic]
version = {attr = "capstone_repo_0.__version__.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["langchain", "gradio", "authentication"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = "src"
