[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notebookbot"
description = "A chatbot for Jupyter notebooks"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.urls]
"Homepage" = "https://github.com/FractalHabits/notebookbot"
"Bug Tracker" = "https://github.com/FractalHabits/notebookbot/issues"

[tool.setuptools_scm]
write_to = "src/notebookbot/_version.py"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
